--- a/app/views/teaspoon/suite/index.html.erb
+++ b/app/views/teaspoon/suite/index.html.erb
@@ -3,8 +3,6 @@
   <head>
     <title>Teaspoon :: Suites</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <%= stylesheet_link_tag "teaspoon" %>
-    <%= javascript_include_tag "teaspoon-filterer" %>
   </head>
   <body>
     <div id="teaspoon-interface">
@@ -12,7 +10,7 @@
         <div id="teaspoon-title">
           <h1>Teaspoon</h1>
           <ul>
-            <li>version: <b><%= Teaspoon::VERSION %></b></li>
+            <li>version: <b>Custom non-sprockets teaspoon</b></li>
             <li><a href="http://github.com/modeset/teaspoon" target="blank">http://github.com/modeset/teaspoon</a></li>
           </ul>
         </div>
@@ -28,7 +26,7 @@
             <h1><%= link_to suite.name, teaspoon.suite_path(suite.name) %></h1>
             <ul class="file">
               <% for file in suite.spec_files %>
-                <li><%= link_to file[:name], teaspoon.suite_path(suite.name, file: file[:path]) %></li>
+                <li><%= link_to teaspoon.suite_path(suite.name, file: file[:path]), teaspoon.suite_path(suite.name, file: file[:path]) %></li>
               <% end %>
             </ul>
           </li>
