--- a/app/views/teaspoon/suite/show.html.erb
+++ b/app/views/teaspoon/suite/show.html.erb
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag *@suite.stylesheets %>
-    <%= javascript_include_tag *@suite.javascripts %>
     <script type="text/javascript">
-      Teaspoon.version = <%= Teaspoon::VERSION.to_json.html_safe %>;
-      Teaspoon.suites  = <%= {all: Teaspoon.configuration.suite_configs.keys, active: @suite.name}.to_json.html_safe %>;
+      window.teaspoonVersion = "Custom non-sprockets teaspoon";
+      window.teaspoonSuites  = <%= {all: Teaspoon.configuration.suite_configs.keys, active: @suite.name}.to_json.html_safe %>;
     </script>
     <%= render @suite.boot_partial %>
   </head>
